[package]
name = "runt"
version = "0.2.0"
authors = ["Todd Mortimer <todd@opennet.ca>"]

[dependencies]
chrono = "0.4.10"
imap = "2.2.0"
imap-proto = "0.11.0"
regex = "1.3.1"
native-tls = "0.2.3"
toml = "0.5.5"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
dirs = "2.0.2"
maildir = "0.4.2"
rusqlite = "0.23.1"
libc = "0.2"
notify = "4.0.15"

[patch.crates-io]
imap = { path = "/home/todd/code/runt/deps/rust-imap" }
imap-proto = { path = "/home/todd/code/runt/deps/tokio-imap/imap-proto" }
