[package]
name = "runt"
version = "0.2.0"
authors = ["Todd Mortimer <todd@opennet.ca>"]
edition = "2018"
description = "IMAP / Maildir synchronization program"
repository = "https://github.com/mordak/runt"
keywords = ["email", "imap", "maildir"]
categories = ["command-line-utilities", "email"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.34"
chrono = "0.4.10"
dirs-next = "2.0.0"
imap = { version = "3.0.0-alpha.4", default-features = false, features = ["rustls-tls"] }
libc = "0.2"
maildir = "0.4.2"
notify = "4.0.15"
rayon = "1.5.1"
regex = "1.3.1"
rusqlite = "0.23.1"
rustls-connector = "0.13.1"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
toml = "0.5.5"
